--- a/module/Frontend/view/v1/frontend/index/index.phtml
+++ b/module/Frontend/view/v1/frontend/index/index.phtml
@@ -91,12 +91,12 @@ $arrCategoryListChildrenFormat = $this->arrCategoryListChildrenFormat;
                             <div class="category-icon">
                                 <i class="fa <?php echo str_replace('icon', 'fa', $value['cate_icon']); ?> fa-2x"></i>
                             </div>
-                            <h4><a href="<?php echo $this->serverUrl() . $this->Url('category', array('controller' => 'category', 'action' => 'index', 'categorySlug' => $value["cate_slug"], 'categoryID' => $value["cate_id"])) ?>"><?php echo mb_strtoupper($value['cate_name']); ?></a></h4>
+                            <h4><a href="<?php echo $this->serverUrl() . $this->Url('category', array('cateSlug' => $value["cate_slug"], 'cateId' => $value["cate_id"])) ?>"><?php echo mb_strtoupper($value['cate_name']); ?></a></h4>
                             <?php
                             if (!empty($arrCategoryByParent[$value['cate_id']])):
                                 foreach ($arrCategoryByParent[$value['cate_id']] as $valueChildren):
                                     ?>
-                                    <p><a href="<?php echo $this->serverUrl() . $this->Url('category', array('controller' => 'category', 'action' => 'index', 'categorySlug' => $valueChildren["cate_slug"], 'categoryID' => $valueChildren["cate_id"])) ?>"><?php echo $valueChildren['cate_name']; ?>  ( <?php echo $valueChildren['cate_total_product']; ?> )</a></p>
+                                    <p><a href="<?php echo $this->serverUrl() . $this->Url('category', array('cateSlug' => $valueChildren["cate_slug"], 'cateId' => $valueChildren["cate_id"])) ?>"><?php echo $valueChildren['cate_name']; ?>  ( <?php echo $valueChildren['cate_total_product']; ?> )</a></p>
                                     <?php
                                 endforeach;
                             endif;
