--- a/module/Frontend/view/v1/frontend/general/contact.phtml
+++ b/module/Frontend/view/v1/frontend/general/contact.phtml
@@ -69,13 +69,13 @@
                     </div>
 
                     <div class="row input-pad" style="padding: 20px">
-                        <div class="col-md-2 col-sm-2">
-                            <image class="img-captcha form-control" src="">
+                        <div class="col-md-2 col-xs-4">
+                            <image class="img-captcha form-control" src="" style="height: 50px">
                         </div>
-                        <div class="col-md-1 col-sm-1 text-center">
+                        <div class="col-md-1 col-xs-1 text-center">
                             <a data-toggle="tooltip" class="refresh-captcha" title="Lấy mã xác nhận mới"><i class="fa fa-2x fa-refresh"></i></a>
                         </div>
-                        <div class="col-md-7">
+                        <div class="col-md-9 col-xs-7">
                             <input type="text" name="captcha" class="form-control" placeholder="Nhập mã xác nhận">
                         </div>
                     </div>
