--- a/module/Frontend/view/v1/frontend/index/index.phtml
+++ b/module/Frontend/view/v1/frontend/index/index.phtml
@@ -120,15 +120,15 @@ $arrCategoryListChildrenFormat = $this->arrCategoryListChildrenFormat;
 <section id="advertisement">
     <div class="container">
         <div class="row">
-            <div class="col-sm-12">
+            <div class="col-sm-12 border-buttom">
                 <div class="main-heading-title text-center">
-                    <h2>RAO VẶT MỚI</h2>
+                    <h3>RAO VẶT MỚI</h3>
                 </div>
-                <hr>
+
             </div>
             <?php if (!empty($this->arrNewContentList)):
                 ?>
-                <section class="panel panel-success">
+                <section class="panel">
                     <div class="panel-body" style="padding: 0px">    
                         <div class="adv-table editable-table">
                             <section id="unseen">
@@ -150,8 +150,18 @@ $arrCategoryListChildrenFormat = $this->arrCategoryListChildrenFormat;
                                             <tr id="item-<?php echo $arrContent['cont_id'] ?>">
                                                 <td style="vertical-align: middle">
                                                     <div class="col-md-1">
-                                                        <a href="<?php echo $this->serverUrl() . $this->Url('view-user-info', ['fullname' => \My\General::getSlug($this->arrUserList[$arrContent['user_created']]['user_fullname']), 'userId' => $this->arrUserList[$arrContent['user_created']]['user_id']]); ?>" class="red-tooltip" data-toggle="tooltip" title="<?php echo $this->arrUserList[$arrContent['user_created']]['user_fullname']; ?>">
-                                                            <img src="http://dev.st.raovat.vn/uploads/user/2016/05/01/thumbs/150x150/1462115823.285.jpg" style="width: 30px; height: 30px"></a>
+                                                        <?php
+                                                        if (!empty($arrContent['user_created'])):
+                                                            $avatar = json_decode($this->arrUserList[$arrContent['user_created']]['user_avatar'], true)[0]['thumbImage']['30x30'];
+                                                            ?>
+                                                            <a href="<?php echo $this->serverUrl() . $this->Url('view-user-info', ['fullname' => \My\General::getSlug($this->arrUserList[$arrContent['user_created']]['user_fullname']), 'userId' => $this->arrUserList[$arrContent['user_created']]['user_id']]); ?>" class="red-tooltip" data-toggle="tooltip" title="<?php echo $this->arrUserList[$arrContent['user_created']]['user_fullname']; ?>">
+                                                                <img src="<?php echo $avatar; ?>" style="width: 30px; height: 30px">
+                                                            </a>
+                                                        <?php else: ?>
+                                                            <a href="javascript:;" class="red-tooltip" data-toggle="tooltip" title="<?php echo $arrContent['user_info']['user_fullname']; ?>">
+                                                                <img src="<?php echo STATIC_URL . '/f/v1/images/noavatar.jpg' ?>" style="width: 30px; height: 30px">
+                                                            </a>
+                                                        <?php endif; ?>
                                                     </div>
                                                     <div class="col-md-11" style="margin-top: 5px;">
                                                         <a href="<?php echo $this->serverUrl() . $this->Url('view-content', ['contentSlug' => $arrContent['cont_slug'], 'contentId' => $arrContent['cont_id']]); ?>" data-toggle="tooltip" title="<?php echo $arrContent['cont_detail_text']; ?>" class="red-tooltip" style="text-decoration: none;">
