--- a/static/f/v1/css/default.css
+++ b/static/f/v1/css/default.css
@@ -89,7 +89,7 @@ h5,h6{
 /*Top Bar*/
 #header header .top-bar{
     padding: 5px 0;
-    background: #3f3d59;
+    background: #34B6D8;
     position: fixed;
     width: 100%;
     z-index: 50;
@@ -120,16 +120,19 @@ h5,h6{
     color: #ffffff;
     margin: 1px 5px;
 }
-#header header .top-bar .links a:nth-of-type(3){
+/*#header header .top-bar .links a:nth-of-type(3){
     display: inline-block;
     border: 1px solid #ffffff;
     width: 75px;
     height: 30px;
     text-align: center;
     padding: 4px 0 0 0;
-}
+}*/
 #header header .top-bar .links a:hover{
     color: #a0ce4e;
+    background: #a0ce4e;
+    color: #ffffff;
+    border: 1px solid #a0ce4e;
 }
 #header header .top-bar .links a:nth-of-type(3):hover{
     background: #a0ce4e;
@@ -179,38 +182,40 @@ h5,h6{
     width: 100%;
     height: 48px;
     border: 1px solid #3f3d59;
-    color: blue;
+    color: #6a6a6a;
     font-size: 14px;
     padding: 10px;
     margin: 0 10px 0 0;
     display: inline-block;
+    border-radius: 5px
 }
+
 #searchBar form .label{
     position: relative;
     width: 100%;
     margin: 0 10px 0 0;
     display: inline-block;
 }
-#searchBar form .label .select{
+#searchBar form .select{
     width: 100%;
     padding: 10px;
     height: 48px;
-    border-radius: 0;
+    /*border-radius: 0;*/
     border: 1px solid #3f3d59;
-    color: blue;
+    color: #6a6a6a;
     display: inline-block;
     cursor: pointer;
     position: relative;
     outline:none;
-    -webkit-appearance:none;
-    -moz-appearance:none;
+/*    -webkit-appearance:none;
+    -moz-appearance:none;*/
     appearance:none;
     font-weight: 400;
     font-size: 14px;
-
+    border-radius: 5px
 }
 #searchBar form .label:after{
-    content: "\f0d7";
+    /*content: "\f0d7";*/
     font-family: FontAwesome;
     right:5px;
     top:14px;
@@ -293,7 +298,8 @@ h5,h6{
     border: 1px solid #ffffff;
     color: #ffffff;
     transition: all 0.5s ease;
-    font-weight: bold
+    font-weight: bold;
+    border-radius: 5px
 }
 #searchBar form .search-btn:hover{
     background: #a0ce4e;
